--- a/static/style.css
+++ b/static/style.css
@@ -55,6 +55,31 @@ th {
     color: white;
 }
 
+.delete-btn {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 5px 10px;
+}
+
+.delete-btn:hover {
+    background-color: #c82333;
+}
+
+.edit-btn {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #ffc107;
+    color: black;
+    text-decoration: none;
+    border-radius: 3px;
+}
+
+.edit-btn:hover {
+    background-color: #e0a800;
+}
+
 .btn {
     display: inline-block;
     margin-top: 20px;
